# yao

./: .gitignore  LICENSE  README.md  TODO.md  build-exe.bat  build-installer.bat  build.bat  build.sh  index.html  package-lock.json  prompt.txt  release.bat  start.bat  start.sh  tailwind.config.cjs  vite.config.ts
src/: index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/src/: main.rs
src/i18n/: en.json  zh-CN.json
src/ui/: App.tsx  ChatBubble.tsx  Dropdown.tsx  ErrorBoundary.tsx  ModelPullDialog.tsx  SettingsDrawer.tsx  SettingsModal.tsx  icons.tsx
src/utils/: i18n.ts  log.ts  proxy.ts  store.ts  types.ts
